syntax = "proto3";

// This is the first message that is sent when a new report is run
message NewReport {
  // The report ID
  string id = 1;

  // The command line that launched this report.
  repeated string command_line = 2;

  // The basename of the script that launched this report. Example: "foo.py"
  string name = 3;

  // The full path of the script that launched this report. Example:
  // "/foo/bar/foo.py"
  string script_path = 4;
}
